--- a/website/css/main.css
+++ b/website/css/main.css
@@ -456,6 +456,31 @@ form:hover .fa {
     color: white;
 }
 
+/* Payment */
+
+.StripeElement {
+    background-color: white;
+    height: 40px;
+    padding: 10px 12px;
+    border-radius: 4px;
+    border: 1px solid transparent;
+    box-shadow: 0 1px 3px 0 #e6ebf1;
+    -webkit-transition: box-shadow 150ms ease;
+    transition: box-shadow 150ms ease;
+}
+
+.StripeElement--focus {
+    box-shadow: 0 1px 3px 0 #cfd7df;
+}
+
+.StripeElement--invalid {
+    border-color: #fa755a;
+}
+
+.StripeElement--webkit-autofill {
+    background-color: #fefde5 !important;
+}
+
 /* ------------------------------------------------------------------------------
 	 Intro
 -------------------------------------------------------------------------------*/
@@ -506,14 +531,14 @@ form:hover .fa {
     -o-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
     transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
     position: relative;
-	text-align: center;
-	margin-left: 39%;	
-	margin-top: 5%;
+    text-align: center;
+    margin-left: 39%;
+    margin-top: 5%;
 }
 
 .donate-button:hover {
-	background-color: #000000;
-	color: #ffffff;
+    background-color: #000000;
+    color: #ffffff;
 }
 
 /* ------------------------------------------------------------------------------
