--- a/website/css/main.css
+++ b/website/css/main.css
@@ -388,8 +388,8 @@ ul li {
 
 form {
     position: relative;
-    top: 50%;
-    left: 50%;
+    /* top: 50%; */
+    left: 50%; 
     transform: translate(-50%, -50%);
     transition: all 1s;
     width: 50px;
@@ -405,10 +405,12 @@ form {
 
 #search-form {
     top: -200px;
+    z-index: 2;
 }
 
 input {
-    position: absolute;
+    /* position: absolute; */
+    position: relative;
     top: 0;
     left: 0;
     width: 100%;
